# chat

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_DIAGRAMS.txt  CHANGELOG.md  Cargo.toml  DEBUG_SIGNUP.md  DESKTOP_CHAT_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  INDEX.md  RESEARCH_SUMMARY.md  RUST_REALTIME_CHAT_GUIDE.md  SLINT_CHAT_QUICK_REFERENCE.md  fix_e2e.py  project-context.md
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.cargo/: config.toml
.codex/: auth.json  config.toml  history.jsonl  version.json
.github/workflows/: rust.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: API.md  ARCHITECTURE_DEEP_DIVE.md  BUTTON_COMPONENT_REFERENCE.md  CHIP_COMPONENT_REFERENCE.md  CODE_COVERAGE_REPORT.md  COMPLETE_DELIVERABLES.md  COMPONENT_API_STANDARD.md  COMPONENT_COMPOSITION_RULES.md  CONVERSATIONITEM_COMPONENT_REFERENCE.md  DEFINITION_OF_READY_DONE.md  DEPLOYMENT.md  DEPLOYMENT_POSTGRES_MIGRATION.md  DESIGN_TOKENS_REFERENCE.md  DEVELOPMENT_CHECKLIST.md  GAPS-ADDRESSED-2025-12-16.md  GAPS-CLOSURE-SUMMARY.md  ICON_COMPONENT_REFERENCE.md  INDEX_UX_DESIGN.md  ISSUE-5-SPINNER-DESIGN-DOCUMENTATION-SUMMARY.md  LOADINGSPINNER_COMPONENT_REFERENCE.md  MESSAGEBUBBLE_COMPONENT_REFERENCE.md  PHASE6_COMPLETION_REPORT.md  PRESENCEINDICATOR_COMPONENT_REFERENCE.md  PRIVACY.md  SPRINT-READY-USER-STORIES.md  SPRINT_STORIES_WITH_DOR_DOD.md  TEXTFIELD_COMPONENT_REFERENCE.md  TROUBLESHOOTING.md  UX_SPECIFICATION_SUMMARY.md  WEEK1_COMPONENT_DEFINITIONS.md  WINDOWS_CLIENT_GUIDE.md  architecture.md  atdd-checklist-001-private-chat.md  automation-summary.md  bmm-workflow-status.yaml  code-review-us-002-2025-12-17-adversarial.md  code-review-us-002-2025-12-17.md  epics.md  gate-decision-story-001-private-chat.md  implementation-readiness-report-2025-12-16.md  (+18 more)
docs/sprint-artifacts/: sprint-status.yaml  td-001-replace-hard-sleeps.md  td-002-test-documentation.md  td-003-websocket-test-completion.md  us-001-design-token-constants.md  us-002-button-component.md  us-003-textfield-component.md  us-004-icon-component.md  us-005-chip-component.md  us-006-loadingspinner-component.md  us-007-messagebubble-component.md  us-008-conversationitem-component.md  us-009-presence-indicator-component.md  us-010-messageinput-container.md  us-011-conversationheader-container.md  us-012-presence-sync-realtime.md  us-013-delivery-status-sync-realtime.md
specs/001-private-chat/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/backend/: Cargo.toml  lib.rs  main.rs  server.rs
src/backend/db/: mod.rs
src/backend/db/migrations/: .gitkeep  001_initial_schema.sql
src/backend/db/queries/: mod.rs
src/backend/handlers/: auth.rs  auth_with_rate_limit.rs  conversation.rs  dispatcher.rs  handshake.rs  heartbeat.rs  messages.rs  mod.rs  parser.rs  refresh.rs  router.rs  server.rs  user.rs  websocket.rs
src/backend/middleware/: auth.rs  mod.rs  rate_limit.rs
src/backend/models/: mod.rs
src/backend/services/: auth_service.rs  conversation_service.rs  message_queue.rs  message_service.rs  mod.rs  presence.rs  system_preferences.rs  user_service.rs
src/backend/tests/: login_test.rs  mod.rs  presence_latency_test.rs  presence_test.rs  schema_validator.rs  signup_test.rs  websocket_handshake_test.rs
src/backend/validators/: mod.rs
src/frontend/: Cargo.toml  build.rs  lib.rs  main.rs  ui.slint
src/frontend/components/: button.slint  chip.slint  icon.slint  loading_spinner.slint  message_bubble.slint  message_input.slint  mod.rs  online_indicator.slint  search_input.slint  text_field.slint  typography_test.slint
src/frontend/components/discovery/: ConversationItem.slint
src/frontend/components/messaging/: MessageComposer.slint  message_composer.rs
src/frontend/components/presence/: ConversationHeader.slint  PresenceIndicator.slint  conversation_header.rs  mod.rs
src/frontend/design/: tokens.slint
src/frontend/handlers/: connection_handlers.rs  delivery_handlers.rs  mod.rs
src/frontend/screens/: chat_screen.rs  chat_screen.slint  error_dialog.slint  login_screen.rs  login_screen.slint  mod.rs  settings_screen.rs  settings_screen.slint  signup_screen.rs  signup_screen.slint  user_search_screen.rs  user_search_screen.slint
src/frontend/services/: http_client.rs  mod.rs  session.rs  websocket_client.rs
src/shared/: Cargo.toml  lib.rs
src/shared/errors/: mod.rs
src/shared/protocol/: mod.rs
tests/: mod.rs
tests/contract/: message_schema_test.rs  schema_validator.rs
tests/fixtures/: database.rs  mod.rs  users.rs
tests/helpers/: factories.rs  mod.rs  polling.rs
tests/integration/: button_integration_tests.rs  button_test.rs  chip_test.rs  conversation_header_test.rs  conversation_item_test.rs  conversation_test.rs  (+19 more)
(+23 files in other folders)
