[workspace]
members = ["src/backend", "src/frontend", "src/shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenCode Chat Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket & HTTP
tungstenite = "0.21"
tokio-tungstenite = "0.21"
warp = "0.3"

# Authentication & JWT
jsonwebtoken = "9.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"] }

# Password hashing
bcrypt = "0.15"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

# UI (Slint for frontend)
slint = "1.5"
