[package]
name = "chat-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
warp = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
bcrypt = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
jsonschema = { workspace = true }

# Internal dependencies
chat-shared = { path = "../shared" }

[lib]
name = "chat_backend"
path = "lib.rs"

[[bin]]
name = "chat-server"
path = "main.rs"
