[package]
name = "chat-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "chat_shared"
path = "lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
